<resources>
    <string name="app_name">GitHub User</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="setting">Setting</string>
    <string name="name">Name</string>
    <string name="tabs">Tabs</string>
    <string name="following_tab">Following</string>
    <string name="follower_tab">Followers</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>